--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -4,11 +4,11 @@
     class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms no-csstransforms3d csstransitions fontface no-generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Cancer Waiting Times | Home</title>
+    <title>Exploratory analytics | Patient Waiting Times | Home</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="{% static 'NHSD_POC/images/CWT/favicon.ico' %}" type="image/x-icon" rel="shortcut icon">
-    <link href="{% static 'NHSD_POC/images/CWT/favicon.ico' %}" type="image/ico" rel="icon">
+    <link href="https://www.mastek.com/sites/default/files/favicon1_0.png" type="image/x-icon" rel="shortcut icon">
+    <link href="https://www.mastek.com/sites/default/files/favicon1_0.png" type="image/ico" rel="icon">
     <style>
         html {
             display: none
@@ -84,7 +84,7 @@
         <div class="navbar navbar-static-top">
             <div class="container" style="padding-top:2px; padding-bottom:2px">
                 <a href="" class="navbar-brand" title="Link to NHS Digital homepage">
-                    <img src="{% static 'NHSD_POC/images/CWT/mastek_logo.jpg' %}">
+                    <img src="{% static 'NHSD_POC/images/CWT/mastek-logo1.png' %}">
                 </a>
                 <div id="myhscic">
                     Hello {% if request.user.is_authenticated %} {{ request.user.username }} |
@@ -206,8 +206,12 @@
                     </button>
                     <a class="navbar-brand" href="javascript:void()">v1.0.0.0</a>
                 </div>
-
+                <div class="navbar-header" style="margin-left:45%">
+                        <a class="navbar-brand" href="https://www.mastek.com/" >Copyright © 2019 Mastek</a>
+                    </div>
                 <div class="navbar-collapse collapse footer-navbar-collapse">
+                
+                    
                     <ul class="nav navbar-nav pull-right">
                         <li>
                             <a href="//www.linkedin.com/company/164825?trk=tyah&amp;trkInfo=clickedVertical%3Acompany%2CclickedEntityId%3A164825%  2Cidx%3A3-1-8%2CtarId%3A1458651117535%2Ctas%3AMastek%20">
@@ -215,7 +219,6 @@
                                     style="width: 1em; height: 1em; margin-top: -1px;">
                                 LinkedIn
                             </a>
-
                        </li>
                             <li>
                                 <a href="https://twitter.com/MastekUK">
@@ -224,14 +227,7 @@
                                     Twitter
                                 </a>
                             </li>
-
-                        <li><a href="#"
-                                accesskey="0">Accessibility</a></li>
-                        <li><a href="#">Freedom
-                                of Information</a></li>
-                        <li><a href="#">Privacy and cookies</a>
-                        </li>
-                        <li><a href="#">Terms and
+                            <li><a href="">Terms and
                                 Conditions</a></li>
                         
                         <li><a href="https://www.mastek.com/contact-us">Contact Us</a></li>
