--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -87,7 +87,7 @@
                     <img src="{% static 'NHSD_POC/images/CWT/mastek-logo1.png' %}">
                 </a>
                 <div id="myhscic">
-                    Hello {% if request.user.is_authenticated %} {{ request.user.username|lower|capfirst }} |
+                    Hello {% if request.user.is_authenticated %} {{ request.user.username|upper }} |
                     <a href="{% url 'logout' %}">
                         <button id="" type="button" class="btn btn-sm btn-primary">
                             Sign out&nbsp;<i class="fa fa-chevron-circle-right fa-2x"></i>
@@ -149,11 +149,11 @@
                             <div class="chartHome" id="chart_div" style="width: 100%; height: 400px; display: block ">
                             </div>
                         </div>
-                        <div style="margin-left:10%">
-                                <b>E1: </b>Transition 1, 
-                                 <b>E2: </b>Transition 2,
-                                 <b>E3: </b>Transition 3,
-                                <b>E4: </b>Transition 4.
+                        <div style="margin-left:10%;font-size: 18px;">
+                                <b>E1: </b><em>Transition 1</em>, 
+                                 <b>E2: </b><em>Transition 2</em>,
+                                 <b>E3: </b><em>Transition 3</em>,
+                                <b>E4: </b><em>Transition 4</em>
                              </div>
                     </div>
                     
