--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -7,24 +7,20 @@
     <title>Exploratory Analytics | Patient Waiting Times | Home</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://www.mastek.com/sites/default/files/favicon1_0.png" type="image/x-icon" rel="shortcut icon">
-    <link href="https://www.mastek.com/sites/default/files/favicon1_0.png" type="image/ico" rel="icon">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">
-
+    <link href="{% static 'NHSD_POC/images/CWT/favicon1_0.png' %}" type="image/x-icon" rel="shortcut icon">
+    <link href="{% static 'NHSD_POC/images/CWT/favicon1_0.png' %}" type="image/ico" rel="icon">
+    <link href="{% static 'NHSD_POC/CSS/CWT/bootstrap-glyphicons.css' %}" rel="stylesheet">
     <style>
         html {
             display: none
         }
-
         .select2-container .select2-selection--single {
             height: 34px !important;
         }
-
         .select2-container--default .select2-selection--single {
             border: 1px solid #ccc !important;
             border-radius: 0px !important;
         }
-
         #loader {
             border: 16px solid #f3f3f3;
             border-radius: 50%;
@@ -38,7 +34,6 @@
             margin-left: 38%;
             margin-top: 130px;
         }
-
         #loaderc {
             border: 16px solid #f3f3f3;
             border-radius: 50%;
@@ -52,7 +47,6 @@
             margin-left: 38%;
             margin-top: 130px;
         }
-
         #loaderbg {
             display: block;
             background-color: black;
@@ -82,12 +76,10 @@
         .right-addon input { padding-right: 30px; }
         .box-shadow {box-shadow: 10px 5px 5px red;}
     </style>
-
     <link href="{% static 'NHSD_POC/CSS/CWT/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'NHSD_POC/CSS/CWT/site.css' %}" rel="stylesheet">
     <link href="{% static 'NHSD_POC/CSS/CWT/bootstrap-chosen.css' %}" rel="stylesheet">
     <link href="{% static 'NHSD_POC/CSS/CWT/font-awesome.min.css' %}" rel="stylesheet">
-
     <script>
         if (self == top) {
             document.documentElement.style.display = 'block';
@@ -97,13 +89,12 @@
        var ajax_url = "{{ api_url }}";
     </script>
 </head>
-<!--style="overflow:hidden"-->
 <body cz-shortcut-listen="true" >
     <div id="wrap">
         <div class="navbar navbar-static-top">
             <div class="container" style="padding-top:2px; padding-bottom:2px">
                 <a href="" class="navbar-brand" title="Link to NHS Digital homepage">
-                    <img src="{% static 'NHSD_POC/images/CWT/mastek-logo1.png' %}">
+                    <img src="{% static 'NHSD_POC/images/CWT/mastek-logo.png' %}" alt="Mastek logo">
                 </a>
                 <div id="myhscic">
                     Hello {% if request.user.is_authenticated %} {{ request.user.username |upper }} |
@@ -114,7 +105,6 @@
                     </a>
                     {% endif %}
                 </div>
-
                 <div class="navbar-title">
                     <h1>Patient Waiting Times- <em style="font-size: 18px;">Exploratory Analytics</em> </h1> 
                     <div class="notification-message "> </div>
@@ -129,35 +119,26 @@
                                 {% for trust in trust_list %}
                                 <option>{{trust}}</option>
                                 {% endfor %}
-                            </template>
-                            <div class="inner-addon right-addon">
-                                    <i class="glyphicon glyphicon-search"></i>
-                                    <input type="text" name="search" id="trust_input"  placeholder="Select The Trust" list="trustresults" autocomplete="off" class="form-control trust_input" onchange="get_performance_data_for_map(this.value)"/>
-                            </div>
-                            <datalist id="trustresults"></datalist>
-                           
+                       </template>
+                        <div class="inner-addon right-addon">
+                                <i class="glyphicon glyphicon-search"></i>
+                                <input type="text" name="search" id="trust_input"  placeholder="Select The Trust" list="trustresults" autocomplete="off" class="form-control trust_input" onchange="get_performance_data_for_map(this.value)"/>
+                        </div>
+                        <datalist id="trustresults"></datalist>   
                         <input type="hidden" id="current_selected_graph">
                         <br>
-                        <span id="region_text"></span>
-
+                        <span><p id="region_text"></p><hr></span>
                 </li>
-                <!--<li class="active" style="text-align: center;float: unset;border-left: none;width: 81%">
-                    <h3>Exploratory analytics </h3>
-                </li> -->
             </ul>
         </div>
-
         <div class="container">
             <div class="container-fluid">
                 <div class="row" style="height: 68vh;display: block;/*background-color: #d4cece;*/" id="dv_chart_no_selection_panel">
                     <div id="" style="display: block;">
-                        <div id="loader" style="position: absolute;top: 0;z-index: 2; margin-top:20%;">
-
-                        </div>
+                        <div id="loader" style="position: absolute;top: 0;z-index: 2; margin-top:20%;"></div>
                     </div>
                     <div class="col-sm-10" id="default-img" style="display: block;margin-left: -36px;">
-
-                        <img src="{% static 'NHSD_POC/images/CWT/waiting_times.png' %}" style="width: 100%">
+                       <img src="{% static 'NHSD_POC/images/CWT/waiting_times.png' %}" style="width: 100%">
                        <div class="pull-right" style="margin-top: 40px;font-size: 15px;">
                             <a href="JavaScript:Void(0);" onclick="focusToSearchTrust()" > Click here </a><strong>To Select the Trust</strong></br>
                             <strong id="Invalid_trust" style="color:red;display: none">Trust code is Invalid</strong><br>
@@ -166,31 +147,27 @@
                     </div>
                 </div>
                 <div id="dv_chart_row_panel" class="row" style="display: none">
-                        
                     <div class="col-sm-10">
                         <div id="loaderbg">
                             <div id="loaderc" style="display: block;position: absolute;top: 0;z-index: 2;background-color: black">
                             </div>
                         </div>
-                        <div id="region_nd_other">
-                                
+                        <div id="region_nd_other" style="display: none">
+                                <h4 style="margin-left: 111px;"><i><b>Region <span id="region_display"></span> and Others</b></i></h4>  
                         </div>          
                         <div class="HomePageMenuList">
                             <div class="chartHome" id="chart_div" style="width: 100%; height: 400px; display: block ">
                             </div>
                         </div>
                         <div style="margin-left:10%;font-size: 18px;">
-                                <b>E1: </b><em>Transition 1</em>, 
+                                 <b>E1: </b><em>Transition 1</em>, 
                                  <b>E2: </b><em>Transition 2</em>,
                                  <b>E3: </b><em>Transition 3</em>,
-                                <b>E4: </b><em>Transition 4</em>
-                             </div>
+                                 <b>E4: </b><em>Transition 4</em>
+                        </div>
                     </div>
-                    
                     <div class="col-sm-2 other_graph" style="border-left: 1px solid black;">
                         <div id="side-bar-chart-option">
-                            <!-- <a id="CwtReportDateLink" target="_blank" style="padding: 10px 10px 9px 10px;">
-                                <i aria-hidden="true"></i>Other Graph</a> -->
                             <center><strong>Other Graph </strong></center>
                         </div>
                         <div id="chart1" class="dvGraphIcon" onclick="showchart(grapType.TvR, this.id )" style="border-bottom: 1px solid black;margin: 7px 0px 0px 0px;padding:  5px;text-align: center;height: 120px;">
@@ -216,15 +193,11 @@
             </div>
             <br>
         </div>
-
-        <div id="push"></div>
-
+    <div id="push"></div>
     </div>
-
     <div id="footer" class="fixed-bottom">
         <div class="navbar navbar-inverse" role="navigation">
             <div class="container">
-
                 <div class="navbar-header fixed-bottom">
                     <button type="button" class="navbar-toggle" data-toggle="collapse"
                         data-target=".footer-navbar-collapse">
@@ -237,10 +210,8 @@
                 </div>
                 <div class="navbar-header" style="margin-left:40%">
                         <a class="navbar-brand" href="https://www.mastek.com/" >Copyright © 2019 Mastek</a>
-                    </div>
+                </div>
                 <div class="navbar-collapse collapse footer-navbar-collapse">
-                
-                    
                     <ul class="nav navbar-nav pull-right">
                         <li>
                             <a href="//www.linkedin.com/company/164825?trk=tyah&amp;trkInfo=clickedVertical%3Acompany%2CclickedEntityId%3A164825%  2Cidx%3A3-1-8%2CtarId%3A1458651117535%2Ctas%3AMastek%20">
@@ -249,16 +220,6 @@
                                 LinkedIn
                             </a>
                        </li>
-                           <!-- <li>
-                                <a href="https://twitter.com/MastekUK">
-                                    <img src="{% static 'NHSD_POC/images/CWT/icon-twitter.png' %}"
-                                        style="width: 1em; height: 1em; margin-top: -1px;">
-                                    Twitter
-                                </a>
-                            </li>
-                            <li><a href="">Terms and
-                                Conditions</a></li>
-                            -->    
                         <li><a href="https://www.mastek.com/contact-us">Contact Us</a></li>
                     </ul>
                 </div>
@@ -273,5 +234,4 @@
     <script src="{% static 'NHSD_POC/js/graph_wrapper.js' %}"></script>
     <script src="{% static 'NHSD_POC/js/trust_performance.js' %}"></script>
 </body>
-
 </html>
