--- a/NHS.Ui/Web/NHSD_POC/templates/registration/login.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/registration/login.html
@@ -3,9 +3,11 @@
 <html lang="en">
 <head>
 	<title>NHS-Login</title>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="{% static 'NHSD_POC/login_form/vendor/bootstrap/css/bootstrap.min.css' %}">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="{% static 'NHSD_POC/images/CWT/favicon1_0.png' %}" type="image/x-icon" rel="shortcut icon">
+    <link href="{% static 'NHSD_POC/images/CWT/favicon1_0.png' %}" type="image/ico" rel="icon">
+	<link rel="stylesheet" type="text/css" href="{% static 'NHSD_POC/login_form/css/bootstrap.min.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'NHSD_POC/login_form/css/util.css' %}">
 	<link rel="stylesheet" type="text/css" href="{% static 'NHSD_POC/login_form/css/main.css' %}">
 </head>
@@ -19,15 +21,8 @@
 						Welcome
 					</span>
 					<span class="login100-form-avatar">
-						<!-- <img src="{% static 'NHSD_POC/images/CWT/logo.png' %}" alt="AVATAR"> -->
-						 <img src="{% static 'NHSD_POC/images/explo_static.png' %}" alt="AVATAR">
-						 
-						 <!-- <h2 style="margin-left: 18%;">Exploratory analytics</h2> -->
+						 <img src="{% static 'NHSD_POC/images/explo_static.png' %}" alt="explo_static">
 					</span>
-					<!-- <span>
-							<center><b>Exploratory analytics</b></center>
-					</span> -->
-
 					<div class="wrap-input100 validate-input m-t-30 m-b-35" data-validate = "Enter username">
 						<span class="input100"></span>
 						<span class="focus-input100" data-placeholder="Username"></span>
@@ -53,7 +48,7 @@
 		</div>
 	</div>
 	<script src="{% static 'NHSD_POC/js/CWT/jquery.js' %}"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+	<!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script> -->
 	<script src="{% static 'NHSD_POC/js/CWT/bootstrap.js' %}"></script>
 	<script type="text/javascript">
 				document.getElementById("id_username").setAttribute("size", "50");
