--- a/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
+++ b/NHS.Ui/Web/NHSD_POC/templates/NHSD_POC/trust_performance.html
@@ -72,11 +72,11 @@
         </div>
         <div class="container">
             <div class="container-fluid">
-                <div class="row" style="height: 68vh;display: block;/*background-color: #d4cece;*/" id="dv_chart_no_selection_panel">
+                <div class="row" style="display: block;/*background-color: #d4cece;*/" id="dv_chart_no_selection_panel">
                     <div id="" style="display: block;">
                         <div id="loader" style="position: absolute;top: 0;z-index: 2; margin-top:20%;"></div>
                     </div>
-                    <div class="col-sm-10" id="default-img" style="display: block;margin-left: -36px;">
+                    <div class="col-sm-10" id="default-img" style="display: block;margin-left: -36px;margin-top: -72px;">
                        <img src="{% static 'NHSD_POC/images/CWT/waiting_times.png' %}" style="width: 100%">
                        <div class="pull-right" style="margin-top: 40px;font-size: 15px;">
                             <a href="JavaScript:Void(0);" onclick="focusToSearchTrust()" > Click here </a><strong>To Select the Trust</strong></br>
@@ -99,8 +99,8 @@
                             <div class="chartHome" id="chart_div" style="width: 100%; height: 400px; display: block ">
                             </div>
                         </div>
-                        <div style="margin-left:10%;font-size: 18px;">
-                            <table id="t01" style="font-size: 12px;">
+                        <div style="margin-left:10%;margin-top: -14px;">
+                            <table id="t01" style="font-size: 10px;">
                                 <tr>
                                     <td><strong>W1:</strong> Waiting Time CANCER REFERRAL To TREATMENT(E1) to First Seen (E2)</td>
                                     <td><strong>W2:</strong> Waiting Time First Seen (E2) To CANCER FASTER DIAGNOSIS PATHWAY END DATE (E3)</td> 
